--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <h1>Hello Git!</h1>
    <p>Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты.</p>
    <p>Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты.</p>
+   <p>Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты.</p>
 </body>
 </html>
 =======
